added eastpoint lighthouse issue to cc issues page

--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -95,6 +95,31 @@
                     </div>
                 </div>
                 <div class="issues-card">
+                    <h5 class="issues-sub-heading">Dangerous Off-road vehicles</h5>
+                    <div class="issues-sub-content">
+                        Off-road vehicles such as dirt-bikes and ATVs
+                        have been a problem in the county for years. When addressed at county meetings,
+                        commissioners claim that the police’s hands are tied because of insurance and state law
+                        related issues. Will we ever solve this problem?
+                    </div>
+                </div>   
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">East Point Lighthouse Upkeep and Maintenance</h5>
+                    <div class="issues-sub-content">
+                        A representative from East Point Lighthouse gave a speech at a County Commissioner meeting on October 10th,
+                        regarding several issues surrounding East Point Lighthouse. Apparently the DEP has been causing blockades and 
+                        giving a lot of runaround in regards to the lighthouse receiving funding for its upkeep. There was also much
+                        discussion surrounding unequal treatment for the Eastpoint lighthouse in comparison to other lighthouses 
+                        throughout the state. Under current management, the lighthouse has been able to have been restored to a fully
+                        functioning lighthouse which ships depend upon, and has become a historic landmark for tourists. However,
+                        funding and support is needed for basic things such as bathrooms (there are currently none), adding walkways, 
+                        and upgrading the current dirt road entrance to a paved road. These specific aforementioned improvements do not
+                        even need funding, they only need to be approved by the DEP. Also, with the ever changing climate, rising 
+                        water levels threatening to destroy the property. The lighthouse needs protection for this concern that other
+                        lighthouses throughout the state already have.
+                    </div>
+                </div>   
+                <div class="issues-card">
                     <h5 class="issues-sub-heading">Tourist Destination Goals</h5>
                     <div class="issues-sub-content">
                         Cumnberland County has been working with Cape May County to promote general
@@ -120,17 +145,10 @@
                         With discussion of gangs in Bridgeton regularly occurring at county meetings,
                         what are our candidates planning to do to handle crime?
                     </div>
-                </div>
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Dangerous Off-road vehicles</h5>
-                    <div class="issues-sub-content">
-                        Off-road vehicles such as dirt-bikes and ATVs
-                        have been a problem in the county for years. When addressed at county meetings,
-                        commissioners claim that the police’s hands are tied because of insurance and state law
-                        related issues. Will we ever solve this problem?
-                    </div>
-                </div>       
+                </div>        
             </div>
+            <br>
+            <br>
             <div class="issues-content">
                 <h3 class="issues-heading">State Level Issues</h3>
                 <div class="issues-card">
