--- a/child_pages/cc-elections/Candidates/donato.html
+++ b/child_pages/cc-elections/Candidates/donato.html
@@ -63,6 +63,9 @@
                 Mr. Donato wants to lead the Sheriff’s Department back to a strong law 
                 enforcement agency, advance partnerships with local and state police departments, 
                 and increase the visibility of the Sheriff’s Department. 
+                <br>
+                Wants to restore law and order. Reposted on <a href="https://www.facebook.com/carin.scalzihendrix/posts/pfbid035HUEDaTYh91gwFKmVKrudGPxWxo8WbLfzm9RsnbeKDUReRQvZkipK7qRusqmfNwpl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+                <br>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
