donatos puerto rican flag raising post

--- a/child_pages/cc-elections/Candidates/donato.html
+++ b/child_pages/cc-elections/Candidates/donato.html
@@ -66,6 +66,9 @@
                 <br>
                 Wants to restore law and order. Reposted on <a href="https://www.facebook.com/carin.scalzihendrix/posts/pfbid035HUEDaTYh91gwFKmVKrudGPxWxo8WbLfzm9RsnbeKDUReRQvZkipK7qRusqmfNwpl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                 <br>
+                <br>
+                Supports multiculturalism. Posted on <a href="https://www.facebook.com/michael.donato.1460/posts/pfbid035PFwWKTbtyHP9EvtEiqnz4nZeT9iYd2CHLghhPwjDdsmgvtTZkcuD3QtLqbBohyql" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+                <br>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
