taylors puerto rican flag post

--- a/child_pages/cc-elections/Candidates/taylor.html
+++ b/child_pages/cc-elections/Candidates/taylor.html
@@ -59,7 +59,10 @@
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                Wants to develop a tourist economy in Cumberland County
+                Wants to develop a tourist economy in Cumberland County.
+                <br>
+                Supports multiculturalism. Reposted on <a href="https://www.facebook.com/michael.donato.1460/posts/pfbid035PFwWKTbtyHP9EvtEiqnz4nZeT9iYd2CHLghhPwjDdsmgvtTZkcuD3QtLqbBohyql" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+                <br>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
