--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -74,7 +74,8 @@
                     <li>Develop more afforable housing and new home construction.</li>
                     <li>Protect the environment.</li>
                     <li>Expand broadband internet access.</li>
-                    <li>Supports trans rights. <a href="https://www.facebook.com/photo/?fbid=624737776357167&set=a.298964968934451" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>                 </li>
+                    <li>Supports trans rights. <a href="https://www.facebook.com/photo/?fbid=624737776357167&set=a.298964968934451" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>           
+                    <li>Supports trans and queer students rights. Reposted on <a href="https://www.facebook.com/GardenStateEquality/posts/pfbid0W1jExtq9g5YUjkEa19uXdq88ebbTzJRkkFC8aXhQqdegZCAyKqG1rNo8vx45uejjl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>                 
                 </ul>
             </div>
             <h4 class="sub-heading">policy positions</h4>
