--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -63,8 +63,19 @@
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                <p>Wants to create economic opportunity for Cumberland County through invesment in the Bayshore Economy. Protecting our shoreline by lowering the county's carbon foot print.  Improving county infrastructure, mainly water/sewage and broadband internet access.</p>
-                <p>Lower the county's suicide rate by 25% over the next 5 years by hiring more counselors and social workers in schools and expanding mental health programs for county citizens. Encouraging housing development and lowering the cost of rent to increase afforable housing. Proposing that new jail have drug treatment programs, full counseling services, educational and job training programs modeled off of programs in Hudson county and Detroit city jail.</p>
+                <p>Wants to create economic opportunity for Cumberland County through invesment in the Bayshore Economy.
+                     Protecting our shoreline by lowering the county's carbon foot print.  Improving county infrastructure,
+                      mainly water/sewage and broadband internet access.</p>
+                <p>Lower the county's suicide rate by 25% over the next 5 years by hiring more counselors and social workers in 
+                    schools and expanding mental health programs for county citizens. Encouraging housing development and lowering 
+                    the cost of rent to increase afforable housing. Proposing that new jail have drug treatment programs, 
+                    full counseling services, educational and job training programs modeled off of programs in Hudson county and 
+                    Detroit city jail.</p>
+                <ul>
+                    <li>Supports trans rights. <a href="https://www.facebook.com/photo/?fbid=624737776357167&set=a.298964968934451" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>           
+                    <li>Supports trans and queer students rights. Reposted on <a href="https://www.facebook.com/GardenStateEquality/posts/pfbid0W1jExtq9g5YUjkEa19uXdq88ebbTzJRkkFC8aXhQqdegZCAyKqG1rNo8vx45uejjl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>                 
+                    <li>Supports equity in schools. Reposted on <a href="https://www.facebook.com/GardenStateEquality/videos/215844538136194/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>
+                </ul>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
@@ -74,9 +85,7 @@
                     <li>Develop more afforable housing and new home construction.</li>
                     <li>Protect the environment.</li>
                     <li>Expand broadband internet access.</li>
-                    <li>Supports trans rights. <a href="https://www.facebook.com/photo/?fbid=624737776357167&set=a.298964968934451" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>           
-                    <li>Supports trans and queer students rights. Reposted on <a href="https://www.facebook.com/GardenStateEquality/posts/pfbid0W1jExtq9g5YUjkEa19uXdq88ebbTzJRkkFC8aXhQqdegZCAyKqG1rNo8vx45uejjl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>                 
-                    <li>Supports equity in schools. Reposted on <a href="https://www.facebook.com/GardenStateEquality/videos/215844538136194/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>                 
+                                     
                 </ul>
             </div>
             <h4 class="sub-heading">policy positions</h4>
