--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -78,7 +78,7 @@
                     <li>Supports trans rights. <a href="https://www.facebook.com/photo/?fbid=624737776357167&set=a.298964968934451" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>           
                     <li>Supports trans and queer students rights. Reposted on <a href="https://www.facebook.com/GardenStateEquality/posts/pfbid0W1jExtq9g5YUjkEa19uXdq88ebbTzJRkkFC8aXhQqdegZCAyKqG1rNo8vx45uejjl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>                 
                     <li>Supports equity in schools. Reposted on <a href="https://www.facebook.com/GardenStateEquality/videos/215844538136194/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>
-                    
+                    <li>Supports inclusive language in schools. Reposted on <a href="https://www.facebook.com/GardenStateEquality/posts/pfbid0fwV3g89tCUCqXtzk7os9AbGUhpnJqcytByamfuL3LFfrLbFuGopLnby4JMFh1Bayl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>
                     </ul>
                     </center>
             </div>
