perellas pro-choice post

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -76,6 +76,8 @@
                     
                     Supported the Middle Mile Grant. Reposted on <a href="https://www.facebook.com/dr.perellaforcumberland/posts/pfbid0TgRBfniPRc2jmMX6UymTMRZwmkriEDsQsyK9AMEvWeWJ1VKAxPSWKBFNo3Hq6Qt2l" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                     <br>
+                    Seems to be strongly pro-choice. <a href="https://www.facebook.com/dr.perellaforcumberland/posts/pfbid0mS3sKJiUFdJWJJTejJx1N1Q3h4JUFD9VDHJbCn3cQuRrFNKneJsjE1MhbdXtw2THl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+                    <br>
                     Opposed a county moratorium on sonar testing for wind turbines. Reposted on <a href="https://www.facebook.com/dr.perellaforcumberland/videos/6253955037992489/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                     <br>
                     Supports multiculturalism. Reposted on <a href="https://www.facebook.com/dr.perellaforcumberland/posts/pfbid02GwouPvRyWutp1epkFGSWDxsi8MiDKtHnfD6AHSsb6QLDYtwU8Ukx7A5wYFiVBWnwl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
