perellas support for juneteenth and pride post

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -82,6 +82,8 @@
                     <br>
                     Supports multiculturalism. Reposted on <a href="https://www.facebook.com/dr.perellaforcumberland/posts/pfbid02GwouPvRyWutp1epkFGSWDxsi8MiDKtHnfD6AHSsb6QLDYtwU8Ukx7A5wYFiVBWnwl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                     <br>
+                    Supports progressive events. Reposted on <a href="https://www.facebook.com/dr.perellaforcumberland/posts/pfbid02eZ73tyQhKugnN8j3VvGJEYowBXckYgUrzVPt6uF8xcuvrMfaCCVTbYnUrXCFzztkl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+                    <br>
                     Supports government transparency. Reposted on <a href="https://www.facebook.com/LWVNJ/posts/pfbid0inAzwkJ2BJWnLfpz4p2PaoyYX2zM4xEuQ8BmPRPDykyDjH1BJRh7QHScadaASUmfl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                     <br>
                     Supports helping impoverished youth. Posted on <a href="https://www.facebook.com/dr.perellaforcumberland/posts/pfbid0u8iiRTDo81kaEiV3yGiahCpppRU7Btm84VMKWvNfb7C8smvQbrGyWmE32xYimQ3il" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
