democrat meet and greet at BME

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -66,6 +66,14 @@
             </div>
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Meet and Greet Cumberland Democratic Candidates</strong></li>
+                    <li class="description">Opportunity to get exposure to the democrat candidates.</li>
+                    <li class="date-and-time">10/20/23 - 5-8 PM</li>
+                    <li class="location">BME, 1554 S Delsea Dr, Vineland</li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>NAACP Candidates Forum</strong></li>
                     <li class="description">Opportunity to get exposure to the candidates in a specific election related event.</li>
                     <li class="date-and-time">10/16/23 - 6–9 PM</li>
