democrat fundraiser event

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -115,6 +115,15 @@
                     <li class="description">A reception to support the re-election of the Republican incumbents for Senate and Assembly. Follow the links to RSVP. Donation required.</li>
                     <li class="date-and-time">10/25/23 - 6pm</li>
                     <li class="location">Congress Hall, 200 Congress Place, Cape May, NJ 08204</li>
+                    <li><a href="https://www.facebook.com/photo/?fbid=216595691432853&set=a.134081569684266">Facebook</a></li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
+                    <li class="name"><strong>Democrat Fundraiser and Wine Tasting</strong></li>
+                    <li class="description">A reception to support local democrats, including White-Morris and Bonner for assembly. $50 donation required. RSVP to LowerDems@gmail.com or 609-594-4155</li>
+                    <li class="date-and-time">10/25/23 - 7-9pm</li>
+                    <li class="location">900 Holmes Ave., North Cape May</li>
                     <li><a href="https://secure.anedot.com/contribute-testa-for-senate/ld1-reception-2023?fbclid=IwAR1FWskRgBPLCuKS8Ethqj0P0IekD-k7rrIo6R4nsBx66djGWm7naoixzdw">Meeting Info on County Calendar</a></li>
                 </ul>
             </div>
