larae smith and white-morris facebook interview

--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -58,6 +58,8 @@
                 <a href="https://www.cmcdems.com/whitemorris" target="_blank" rel="noopener noreferrer" class="website-link">Cape May County Democrats</a>
                 <a href="https://www.facebook.com/ld1njvote" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Democrats</a>
+                Interview on <a href="https://www.facebook.com/QBCSJ/videos/183645471369458" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+
             </div>
             <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
