white-morris women representation in government post

--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -59,7 +59,9 @@
         </div>
         <h3 class="sub-heading">individual agenda</h3>
             <div class="agenda-thesis">
-                Unknown
+                Supports Planned Parenthood. <a href="https://www.facebook.com/ld1njvote/posts/pfbid02SsnRk2YTaTY5XPjtV2Q3HH1Spsnm8FpJUHVTAf94JNneBiWBHxmQVMQxVnSsbZsbl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+                Supports more women representation in government. <a href="https://www.facebook.com/ld1njvote/posts/pfbid02SsnRk2YTaTY5XPjtV2Q3HH1Spsnm8FpJUHVTAf94JNneBiWBHxmQVMQxVnSsbZsbl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
