typography edits on homepage for readability, changed color of hamburger

--- a/index.html
+++ b/index.html
@@ -53,36 +53,44 @@
         <div class="main-content-box-with-shadow">
             <h4 class="ms-heading">Mission Statement</h4>
             <div class="ms-content">
-                &quot;At Inform the Vote, our mission is to establish a new standard of civic engagement by
-                equipping you—the citizen—with thoroughly researched, unbiased, and easily digestible
-                information. We believe an empowered citizenry is the cornerstone of a transparent and
+                <p class="ms-content-p">
+                 &quot;At Inform the Vote, our mission is to establish a new standard of civic engagement by
+                 equipping you—the citizen—with thoroughly researched, unbiased, and easily digestible
+                 information.    
+                </p>
+                <p class="ms-content-p">
+                We believe an empowered citizenry is the cornerstone of a transparent and
                 accountable local government. Yet, in an era where this should be the norm, both
-                transparency and accountability often fall short. We&#39;re here to challenge this status quo.
-                Our platform is designed to streamline and consolidate the essential information you
+                transparency and accountability often fall short. We&#39;re here to challenge this status quo.  
+                </p>
+                <p class="ms-content-p">
+                 Our platform is designed to streamline and consolidate the essential information you
                 need to become an informed voter, breaking down the barriers that often deter civic
-                participation in a process that can and should be more straightforward.&quot;
+                participation in a process that can and should be more straightforward.&quot;   
+                </p>
+                
             </div>
             <h4 class="ss-heading">Site Sections</h4>
             <div class="ss-content">
                 <ul class="ss-ol">
-                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_election_candidates.html">Cumberland County Election:</a></strong> Navigate an interactive primary ballot that provides concise but
+                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_election_candidates.html">Cumberland County Election</a></strong> Navigate an interactive primary ballot that provides concise but
                         comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
                         policy positions into an easily understandable format.</li>
-                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues:</a></strong> Cut through the clutter by exploring major community issues presented in a
+                    <li class="ss-li"><strong><a href="/child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></strong> Cut through the clutter by exploring major community issues presented in a
                         straightforward manner, allowing you to quickly gauge where each candidate stands.</li>
-                    <li class="ss-li"><strong><a href="/child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Election:</a></strong> Navigate an interactive primary ballot that provides concise but
+                    <li class="ss-li"><strong><a href="/child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Election</a></strong> Navigate an interactive primary ballot that provides concise but
                         comprehensive profiles for each candidate. We&#39;ve distilled complex qualifications and
                         policy positions into an easily understandable format.</li>
-                    <li class="ss-li"><strong><a href="/child_pages/vsb-elections/vsb_election_issues.html">Vineland School Board Issues:</a></strong> Cut through the clutter by exploring major community issues presented in a
+                    <li class="ss-li"><strong><a href="/child_pages/vsb-elections/vsb_election_issues.html">Vineland School Board Issues</a></strong> Cut through the clutter by exploring major community issues presented in a
                         straightforward manner, allowing you to quickly gauge where each candidate stands.</li>
-                    <li class="ss-li"><strong><a href="child_pages/get-involved.html">Get Involved:</a></strong> Don&#39;t just be a spectator—be an actor in the democratic process. Our
+                    <li class="ss-li"><strong><a href="child_pages/get-involved.html">Get Involved</a></strong> Don&#39;t just be a spectator—be an actor in the democratic process. Our
                         consolidated calendar guides you to meaningful opportunities for community and
                         political engagement.</li>
-                    <li class="ss-li"><strong><a href="child_pages/about.html">Our Process:</a></strong> Understand the meticulous steps we&#39;ve taken to bring you this resource.
+                    <li class="ss-li"><strong><a href="child_pages/about.html">Our Process</a></strong> Understand the meticulous steps we&#39;ve taken to bring you this resource.
                         Our journey to advocate for improved community engagement, transparency, and
                         accountability has been long but is a shared responsibility—one that should be easier to
                         undertake, but often isn&#39;t.</li>
-                    <li class="ss-li"><strong><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions: </a></strong>While Inform The Vote has made many attempts to contact candidates for 
+                    <li class="ss-li"><strong><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions </a></strong>While Inform The Vote has made many attempts to contact candidates for 
                     further information, we are still left with several unanswered questions.</li>
                 </ul>
             </div>
