candidates forum op-ed page test

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                         undertake, but often isn&#39;t.</li>
                     <li class="ss-li"><strong><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions </a></strong>While Inform The Vote has made many attempts to contact candidates for 
                     further information, we are still left with several unanswered questions.</li>
+                    <li class="ss-li"><strong><a href="child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed </a></strong>With election season coming to an end, what might be one active voter's take on possibly the most important event of the campaign season be?</li>
                 </ul>
             </div>
         </div>
