--- a/child_pages/candidates-forum-op-ed.html
+++ b/child_pages/candidates-forum-op-ed.html
@@ -42,56 +42,58 @@
 
     
     <div class="container">
-    <h1 class="about-h1">About Inform The Vote</h1>   
+    <h1 class="about-h1">Navigating the Fog</h1>   
     <div class="main-content-with-box-shadow-about">
         <div class="our-mission">
-            <h2 class="our-mission-heading">Our Mission</h2>
+            <h2 class="our-mission-heading">Unpacking the Candidates' Forum in a County Craving Clarity</h2>
             <div class="our-mission-content">
                 <div class="content-1">
-                    <center>Navigating the Fog: Unpacking the Candidates' Forum in a County Craving Clarity</center>
+                    
                     <br>
                     <br>
-In a democracy where information should flow freely and transparently, last night’s candidates' forum left much to be desired. 
-With a turn-up of around 20 people in a county of about 150,000, the meeting mirrored the prevailing state of local politics - a 
-landscape parched for robust civic engagement and drowned in a lack of accessible, substantive information about our candidates and 
-their visions.
+In a democracy where information should flow freely and transparently, especially with access to modern technology,
+last night’s candidates' forum left much to be desired. While I would like to thank the present candidates, the constituents who 
+showed up, and the NAACP for hosting a much needed event, it is still my opinion that the county and state elections have only provided 
+a fraction of the information needed to cast a truly informed vote. A 2 hour event simply isn't long enough to go in-depth into the 
+issues. Even if the event had gone into all hours of the night with passionate debate to get at the core of our local politics, only 
+about 20 people out of a county of 150,000 showed up.We clearly lack civic engagement and have limited access to substantive 
+information about our candidates and their visions.
 <br>
 <br>
-A Forum in Silence
 The forum, aimed at providing constituents with a clearer view of the candidates’ agendas, saw the presence of a mix of incumbents and 
 newcomers from both major parties. Questioning, spearheaded by an NAACP representative, probed into areas such as qualifications, 
 budget and fiscal responsibility, poverty, homelessness, substance abuse, and gun violence.
 <br>
 <br>
-Despite the pivotal questions asked, an eerie silence hung around crucial topics. Charles Laspata, a significant name in the race,
-remained a ghost, leaving a pressing question unanswered: Is he still in the race?
+Despite the pivotal questions asked, an eerie silence hung around crucial topics. Charles Laspata, the democrat challenger to State 
+Senate incumbent Mike Testa, remained a ghost, leaving a pressing question unanswered: Is he still in the race? If not, is this an 
+indication of both a lack of cohesion and organization within the democrat party? Could he not have been replaced by now?
 <br>
 <br>
-The Missing Pieces
-An unsettling absence of depth in discourse remained, with questions about state-level abortion legislation, LGBTQ+ rights, 
-specific policy priorities, and reactions to recent national political controversies, left hanging in the nebulous space of political 
-uncertainty.
+While there was some passionate discussion around some of the issues, an unsettling absence of depth in discourse remained, with 
+questions about state-level abortion legislation, LGBTQ+ rights, specific policy priorities, and reactions to recent national political 
+controversies (such as "Is there any funny business going on with both party's slate of electors in presidential races?"), 
+left hanging in the nebulous space of political uncertainty.
 <br>
 <br>
-Moreover, an opaque promotion strategy (or lack thereof) for the forum echoed the broader informational vacuum. The absence of a 
-concerted effort to bring the community into the room where decisions are discussed spoke volumes of the inadequate emphasis on civic 
-engagement.
+Moreover, an opaque promotion strategy (or lack thereof) for this event echoed the broader informational vacuum. As a pro-active follower
+of the local elections, I was only made aware of this crucial event after making some noise about the lack of press coverage in the county
+at a county commissioner meeting... after which a candidate who just happened to be at the county meeting personally texted me the 
+details of last nights event. The absence of a concerted effort to bring the community into the room where decisions are discussed 
+spoke volumes of the inadequate emphasis on civic engagement.
 <br>
 <br>
-Reflecting on Reality
 The reflections on the forum are a microcosm of the arid landscape of local journalism in our county. An effective journalistic
 endeavor is not a luxury but a necessity to foster a culture of informed and active citizenry. The scarcity of consolidated, 
 objective information hampers the community’s ability to make empowered electoral decisions, affecting the very essence of our local 
 democratic fabric.
 <br>
 <br>
-Charting a New Course
 Change beckons at the doors of our information dissemination strategies. A third-party entity, impartial and thorough, could serve as 
 a beacon, guiding constituents through the labyrinth of local politics. Consolidating essential information into accessible hubs, both 
 online and offline, could rejuvenate the dwindling spirits of civic participation.
 <br>
 <br>
-Conclusion
 The forum has come and gone, leaving in its wake a residue of unanswered questions and a craving for a more coherent and comprehensive 
 political dialogue. As we move forward, let us reevaluate and reinvent our information landscapes, placing accessibility, objectivity, 
 and engagement at the core of our democratic pursuits.
