--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <li class="link"><a href="child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
                         <li class="link"><a href="child_pages/get-involved.html">Get Involved</a></li>
                         <li class="link"><a href="child_pages/events.html">Events</a></li>
+                        <li class="link"><a href="child_pages/candidates-forum-op-ed.html">Candidates Forum Op-Ed</a></li>
                         <li class="link"><a href="child_pages/about.html">About</a></li>
                         <li class="link"><a href="child_pages/contact.html">Contact</a></li>
                     </ul>
