perellas anti-patriarchy post on twitter

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -98,7 +98,9 @@
                     Supports inclusive language in schools. Reposted on <a href="https://www.facebook.com/GardenStateEquality/posts/pfbid0fwV3g89tCUCqXtzk7os9AbGUhpnJqcytByamfuL3LFfrLbFuGopLnby4JMFh1Bayl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                     <br>
                     Opposes 'parental rights'. Reposted on <a href="https://newjerseyglobe.com/legislature/steinhardt-testa-seek-to-intervene-as-opponents-of-ags-parental-rights-lawsuit/?fbclid=IwAR1iZrbvPp56-mUnmDwZU3H8JfVv7vr6s3ns5OtmL56ziacdwdMT1wZBhbU" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
-                    </center>
+                    <br>
+                    Advocates against the patriarchy/"time for women to lead". Reposted on <a href="https://twitter.com/DrJoeighPerella/status/1714483229837709656" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
+                </center>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
