lack of press coverage issues card added

--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -50,6 +50,25 @@
             <div class="issues-content">
                 <h3 class="issues-heading">County Level Issues</h3>
                 <div class="issues-card">
+                    <h5 class="issues-sub-heading">Lack of Press Coverage</h5>
+                    <div class="issues-sub-content">
+                        While the Middle Mile Grant was certainly the most popular issue this election cycle, it is the opinion of
+                        Inform the Vote that the lack of press coverage is the most important. The local paper, the Daily Journal,
+                        was absorbed by a parent company and the last reporter in the county retired last year. Without a trusted
+                        3rd party entity providing objective oversight regarding issues facing the county, the public is left 
+                        woefully uninformed about what is going on, especially in regards to local elections where biased political
+                        messaging could be running rampant. While most of the candidates agree we need press coverage, none of them
+                        seem to be particularly interested engaging in an action plan to fix the problem for a variety of reasons.
+                        One candidate said "With the lack of press coverage, candidates are left to be their own press on social media." 
+                        Well, that could easily lead to overwhelming bias and scattered sources of information... who has the time to
+                        scour all the candidates social media and verify the facts? The press, that's who. "If I get involved in forming the 
+                        local press, it could be viewed as a bias for my party." Understandable, but not acceptable. The public needs reasonable
+                        access to comprehensive, consolidated information regarding election choices. "We'll let the public know what we want 
+                        them to know", this did not come from a candidate, but rather from a campaign organizer. It's pretty clear that we have a 
+                        problem, but not necessarily anyone willing to solve it.
+                    </div>
+                </div>
+                <div class="issues-card">
                     <h5 class="issues-sub-heading">Middle Mile Broadband</h5>
                     <div class="issues-sub-content">
                         This has been the most popular issue over the past several
