perellas pro-choice post on twitter

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -100,6 +100,9 @@
                     Opposes 'parental rights'. Reposted on <a href="https://newjerseyglobe.com/legislature/steinhardt-testa-seek-to-intervene-as-opponents-of-ags-parental-rights-lawsuit/?fbclid=IwAR1iZrbvPp56-mUnmDwZU3H8JfVv7vr6s3ns5OtmL56ziacdwdMT1wZBhbU" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
                     <br>
                     Advocates against the patriarchy/"time for women to lead". Reposted on <a href="https://twitter.com/DrJoeighPerella/status/1714483229837709656" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
+                    <br>
+                    Pro-choice. <a href="https://twitter.com/DrJoeighPerella/status/1689113802862649344" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
+
                 </center>
             </div>
             <h4 class="sub-heading">party messaging</h4>
