perellas gun discussion post with special candidates forum note

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -102,7 +102,8 @@
                     Advocates against the patriarchy/"time for women to lead". Reposted on <a href="https://twitter.com/DrJoeighPerella/status/1714483229837709656" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
                     <br>
                     Pro-choice. <a href="https://twitter.com/DrJoeighPerella/status/1689113802862649344" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a>
-
+                    <br>
+                    Active in discussing gun violence. <a href="https://twitter.com/DrJoeighPerella/status/1680704356822269952" target="_blank" rel="noopener noreferrer" class="website-link">Twitter/X</a> Special Note: Dr Perella was the only candidate at the Candidates Forum to oppose armed security at public schools.
                 </center>
             </div>
             <h4 class="sub-heading">party messaging</h4>
