armed security at schools policy stances added

--- a/child_pages/cc-elections/Candidates/acevedo.html
+++ b/child_pages/cc-elections/Candidates/acevedo.html
@@ -73,6 +73,8 @@
                 Inform the Vote spoke with Acevedo at Deerfield Day. He describes himself as an 'anti-legacy candidate' and stated a funeral director is not 
                 qualified for the position, regarding his opponent Luisi.  Would like to update form policies for county, mainly making forms available to be filled 
                 out online.  Currently forms must be printed out and filled out in writing.  Mentioned his website: <a href="https://acevedoforsurrogate.com">Acevedo for Surrogate</a>.
+                <br>
+                Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
