--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -70,6 +70,8 @@
             <div class="policy-positions">
                 Inform The Vote was able to speak with Austino at Deerfield Day. Stated he helped develop policies over the years but did not go into detail on such policies.
                 Was instrumental in Vineland Police Department becoming first accredited department in the state of NJ. Wants to develop community outreach project for youth and seniors.
+                <br>
+                Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
