--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -71,8 +71,8 @@
             </div>
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
-                Inform The Vote has reached out to this candidate through numerous means and have
-                yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes.
+                <br>
+                Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
