--- a/child_pages/cc-elections/Candidates/donato.html
+++ b/child_pages/cc-elections/Candidates/donato.html
@@ -80,6 +80,8 @@
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform the vote was able to speak with Sheriff Donato at a Republican breakfast event in Mauricetown. His main focus seems to be to increase police presence in the county which should act as a deterrent for overall crime and dangerous off-road vehicle activity (ATVs, dirtbikes, etc.). He is also thinking of new ways to address crime throughout the county since current legislation oftentimes prevents police from pursuing crime. 
+                <br>
+                Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
