--- a/child_pages/cc-elections/Candidates/luisi.html
+++ b/child_pages/cc-elections/Candidates/luisi.html
@@ -74,6 +74,8 @@
             <div class="policy-positions">
                 Mr. Luisi plans to be a full time surrogate, which is in contrast to many public officials not treating their 
                 positions as a primary job. He plans to provide free will service. He wants to add additional offices in the county.
+                <br>
+                Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
