--- a/child_pages/cc-elections/Candidates/sauro.html
+++ b/child_pages/cc-elections/Candidates/sauro.html
@@ -72,10 +72,12 @@
             </div>
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
-                Inform the Vote could find no available public information explaining the details of this agenda.
+                
                 Inform The Vote was able to speak with Sauro at Deerfield Day, Sun August 6th.  Sauro wants to bring 
                 more business into Cumberland County.  Wants to leverage college students for research into matter. 
                 Also wants to lower taxes.
+                <br>
+                Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
