--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -128,7 +128,8 @@
                     <li>Represented small businesses as a lawyer to help them re-open during the pandemic</li>
                     <li>Opposed Murphy borrowing $9.9 billion to balance the state budget. Through Testa’s lawsuit, the borrowing was reduced to $4.5 billion because the borrowing reduced its scope to funds lost specifically due to the pandemic.</li>
                     <li>Opposed Governor Murphy’s executive order to create a full Vote By Mail General Election in court to help support election integrity.</li>
-                    <li>Supported a legislative bill that would set up a voter fraud task force, suspend automatic voter registration, move people with undeliverable addresses to inactive voter rolls, and require the secretary of state’s website to have a place to report vote-by-mail fraud</li>
+                    <li>Supported a legislative bill that would set up a voter fraud task force, suspend automatic voter registration, move people with undeliverable addresses to inactive voter rolls, and require the secretary of state’s website to have a place to report vote-by-mail fraud</li>   
+                    <li>Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)</li>
                 </ol>
             </div>
             <h4 class="sub-heading">experience</h4>
