--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -104,9 +104,8 @@
             </div>
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
-                Inform the Vote could find no available public information explaining the details of this agenda.
-                Inform The Vote has reached out to this candidate through numerous means and have
-                yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
+                <br>
+                Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)
             </div>
             <h4 class="sub-heading">experience</h4>
             NJ District 1 Assemblyman - Sworn in on January 14th 2020 to present
